Fixed modal not closing when clicking outside of it. Added backdrop for opacity using z-indexes, and document appending

--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,16 @@
     opacity: 0.7;
 }
 
+.backdrop {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+}
+
 
 .modal {
     background-color: rgb(255, 255, 255);
@@ -171,6 +181,8 @@
     min-width: 30vw;
     height: 100vh;
     display: none;
+    z-index: 999; 
+    /* Higher Z-Index so the backdrop covers other content but not the modal */
 }
 
 .modal-content {
